Cleanup of MPI version

--- a/diffusion2D_visualization_hl.ipynb
+++ b/diffusion2D_visualization_hl.ipynb
@@ -20,10 +20,11 @@
    "outputs": [],
    "source": [
     "fh = adios2.open(\"diffusion2D.bp\", \"r\", \"adios2.xml\", \"readerIO\")\n",
-    "# This is equivivalent to:\n",
-    "#adios  = adios2.ADIOS(configFile=\"adios2.xml\")\n",
-    "#io     = adios.DeclareIO(\"readerIO\")\n",
-    "#engine = io.Open(\"diffusion2D.bp\", adios2.Mode.Read)"
+    "\n",
+    "# This corresponds to the following full API commands:\n",
+    "# adios  = adios2.ADIOS(configFile=\"adios2.xml\")\n",
+    "# io     = adios.DeclareIO(\"readerIO\")\n",
+    "# engine = io.Open(\"diffusion2D.bp\", adios2.Mode.Read)"
    ]
   },
   {
@@ -43,7 +44,7 @@
     }
    ],
    "source": [
-    "fh.available_variables()"
+    "fh.available_variables() # There are no available variables before the first step when using SST"
    ]
   },
   {
@@ -68,18 +69,18 @@
     "nprocessed=0\n",
     "for step in fh:\n",
     "    if nprocessed == 0:\n",
-    "        metadata       = step.available_variables()\n",
-    "        nxy_global_str = metadata['temperature']['Shape']\n",
-    "        T_type_str     = metadata['temperature']['Type']\n",
-    "        nxy_global     = list(map(int, nxy_global_str.split(',')))\n",
-    "        T              = np.zeros(nxy_global, dtype=T_type_str) # Prealocate memory for T\n",
+    "        metadata       = step.available_variables()                 # Extract meta data\n",
+    "        nxy_global_str = metadata['temperature']['Shape']           # ...\n",
+    "        T_type_str     = metadata['temperature']['Type']            # ...\n",
+    "        nxy_global     = list(map(int, nxy_global_str.split(',')))  # ...\n",
+    "        T              = np.zeros(nxy_global, dtype=T_type_str)     # Prealocate memory for T using the meta data\n",
     "        print(nxy_global, T_type_str); sleep(2)\n",
-    "    T = step.read(\"temperature\")\n",
-    "    IPython.display.clear_output(wait=True) #Passing true says to wait until new ouput before clearing, this prevents flickering\n",
-    "    plt.title('Temperature at step ' + str(fh.current_step()))\n",
-    "    plt.contourf(T, 256, cmap=plt.cm.jet)\n",
-    "    plt.colorbar()\n",
-    "    plt.show()\n",
+    "    T = step.read(\"temperature\")                                    # Read the current step of T (temperature)\n",
+    "    IPython.display.clear_output(wait=True)                         # Pass wait=True to wait until new ouput before clearing; this prevents flickering\n",
+    "    plt.title('Temperature at step ' + str(fh.current_step()))      # Plot the temperature\n",
+    "    plt.contourf(T, 256, cmap=plt.cm.jet)                           # ...\n",
+    "    plt.colorbar()                                                  # ...\n",
+    "    plt.show()                                                      # ...\n",
     "    nprocessed += 1"
    ]
   },
