Add full API visualization for MPI and polish

--- a/diffusion2D_visualization.ipynb
+++ b/diffusion2D_visualization.ipynb
@@ -17,9 +17,23 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'SstReader'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "fh = adios2.open(\"diffusion2D.bp\", \"r\", \"adios2.xml\", \"readerIO\")   # The \"file handler\" can also represent a SST stream."
+    "adios  = adios2.ADIOS(configFile=\"adios2.xml\")                     # Use the configurations defined in \"adios2.xml\"...\n",
+    "io     = adios.DeclareIO(\"readerIO\")                               # ... in the section \"readerIO\"\n",
+    "engine = io.Open(\"diffusion2D.bp\", adios2.Mode.Read)               # Open the file/stream \"diffusion2D.bp\"\n",
+    "engine.Type()                                                      # Check the type of the engine: BP4/SST..."
    ]
   },
   {
@@ -39,7 +53,7 @@
     }
    ],
    "source": [
-    "fh.available_variables()                                            # There are no available variables before the first step when using SST"
+    "io.AvailableVariables()                                            # There are no available variables before the first step when using SST"
    ]
   },
   {
@@ -62,20 +76,21 @@
    ],
    "source": [
     "nprocessed=0\n",
-    "for step in fh:                                                     # Loop through the steps in the file/stream\n",
+    "while engine.BeginStep(mode=adios2.StepMode.Read,timeoutSeconds=100.0) != adios2.StepStatus.EndOfStream :  # Begin the next ADIOS2 read step while there is any\n",
+    "    T_id = io.InquireVariable(\"temperature\")                       # Get a handle for the variable T. ATTENTION: T_id is only valid for the current step when using streaming (SST or file streaming); thus, moving it into the if statement below would lead to an error!\n",
     "    if nprocessed == 0:\n",
-    "        metadata       = step.available_variables()                 # Extract meta data\n",
-    "        nxy_global_str = metadata['temperature']['Shape']           # ...\n",
-    "        T_type_str     = metadata['temperature']['Type']            # ...\n",
-    "        nxy_global     = list(map(int, nxy_global_str.split(',')))  # ...\n",
-    "        T              = np.zeros(nxy_global, dtype=T_type_str)     # Prealocate memory for T using the meta data\n",
-    "        print(nxy_global, T_type_str); sleep(2)\n",
-    "    T = step.read(\"temperature\")                                    # Read the current step of T (temperature)\n",
-    "    IPython.display.clear_output(wait=True)                         # Pass wait=True to wait until new ouput before clearing; this prevents flickering\n",
-    "    plt.title('Temperature at step ' + str(fh.current_step()))      # Plot the temperature\n",
-    "    plt.contourf(T, 256, cmap=plt.cm.jet)                           # ...\n",
-    "    plt.colorbar()                                                  # ...\n",
-    "    plt.show()                                                      # ...\n",
+    "        nxy_global = T_id.Shape()                                  # Extract meta data\n",
+    "        nxy        = T_id.Count()                                  # ...\n",
+    "        T_type     = T_id.Type()                                   # ...\n",
+    "        T          = np.zeros(nxy, dtype=T_type)                   # Prealocate memory for T using the meta data\n",
+    "        print(nxy_global, nxy, T_type); sleep(4)                   # Note that nxy==nxy_global as we read only with one process\n",
+    "    engine.Get(T_id, T)                                            # Add T to variable(s) for reading (SetSelection() would be needed in addition if we were reading the data with multiple MPI processes: this would make sure that every process reads \"his\" block)        \n",
+    "    engine.EndStep()                                               # End ADIOS2 read step (includes normally the actual reading of data)\n",
+    "    IPython.display.clear_output(wait=True)                        # Pass wait=True to wait until new ouput before clearing; this prevents flickering\n",
+    "    plt.title('Temperature at step ' + str(engine.CurrentStep()))  # Plot the temperature\n",
+    "    plt.contourf(T, 256, cmap=plt.cm.jet)                          # ...\n",
+    "    plt.colorbar()                                                 # ...\n",
+    "    plt.show()                                                     # ...\n",
     "    nprocessed += 1"
    ]
   },
@@ -85,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fh.close()"
+    "engine.Close()"
    ]
   },
   {
